WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216230
ConvolverNode incorrectly outputs silence because m_reverb is null
https://bugs.webkit.org/show_bug.cgi?id=216230
Summary
ConvolverNode incorrectly outputs silence because m_reverb is null
Chris Dumez
Reported
2020-09-06 14:21:24 PDT
ConvolverNode incorrectly outputs silence because m_reverb is null.
Attachments
Patch
(80.35 KB, patch)
2020-09-06 14:27 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(80.94 KB, patch)
2020-09-06 14:55 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-09-06 14:27:36 PDT
Created
attachment 408133
[details]
Patch
Darin Adler
Comment 2
2020-09-06 14:32:33 PDT
Comment on
attachment 408133
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=408133&action=review
> Source/WebCore/Modules/webaudio/ConvolverNode.h:-63 > - void initialize() final; > - void uninitialize() final;
Can we refactor to get rid of these across the board? Are they valuable?
Chris Dumez
Comment 3
2020-09-06 14:34:12 PDT
(In reply to Darin Adler from
comment #2
)
> Comment on
attachment 408133
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=408133&action=review
> > > Source/WebCore/Modules/webaudio/ConvolverNode.h:-63 > > - void initialize() final; > > - void uninitialize() final; > > Can we refactor to get rid of these across the board? Are they valuable?
Some of them do initialize() / uninitialize() things. I will have to look into it more to see if we can simplify.
Chris Dumez
Comment 4
2020-09-06 14:55:19 PDT
Created
attachment 408135
[details]
Patch
EWS
Comment 5
2020-09-06 16:09:44 PDT
Committed
r266684
: <
https://trac.webkit.org/changeset/266684
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 408135
[details]
.
Radar WebKit Bug Importer
Comment 6
2020-09-06 16:10:14 PDT
<
rdar://problem/68436608
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug