ConvolverNode incorrectly outputs silence because m_reverb is null https://bugs.webkit.org/show_bug.cgi?id=216230

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Unreviewed, rebaseline tests that are now passing.

* web-platform-tests/webaudio/the-audio-api/the-convolvernode-interface/convolver-response-1-chan-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-convolvernode-interface/convolver-response-2-chan-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-convolvernode-interface/convolver-response-4-chan-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-convolvernode-interface/convolver-upmixing-1-channel-response-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-convolvernode-interface/realtime-conv-expected.txt:

Source/WebCore:

ConvolverNode relies on m_reverb to to audio processing. m_reverb would get initialized
when calling ConvolverNode::setBuffer(). However, setting the buffer would cause
ConvolverNode::checkNumberOfChannelsForInput(), which could cause unitialize() and then
initialize() to get called. The issue was that unitialize() would null out m_reverb
and nothing would re-initialize it.

No new tests, rebaselined existing tests.

* Modules/webaudio/ConvolverNode.cpp:
(WebCore::ConvolverNode::initialize): Deleted.
(WebCore::ConvolverNode::uninitialize): Deleted.
* Modules/webaudio/ConvolverNode.h:

LayoutTests:

Unreviewed, unskip tests that should hopefully not be flaky anymore, not that they
are passing.

* TestExpectations:


Canonical link: https://commits.webkit.org/229053@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266684 268f45cc-cd09-0410-ab3c-d52691b4dbfc